fixing some bug & revision